@@ -22,6 +22,7 @@
 - https://github.com/eclipse-sirius/sirius-components/issues/1448[#1448] [formdescriptioneditors] Create a default style for new TextArea widgets like for the others
 - https://github.com/eclipse-sirius/sirius-components/issues/1397[1397] [view] Fix an issue where canonical tools of reused node descriptions were not available
 - https://github.com/eclipse-sirius/sirius-components/issues/666[#666] [diagram] Make the contextual palette display the tools of the current selection
+- https://github.com/eclipse-sirius/sirius-components/issues/1442[#1442] [diagram] Selecting an element in a diagram can hide others
 
 === New Features
 
